--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -8,13 +8,13 @@
     }
     .planning_table_wrapper{
       width: 84%;
-      height: 95vh;
+      height: 100%;
       padding: 10px 2px 10px 2px;
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
         background-color: #fff;
-        height: 92vh;
+        height: 100%;
         .planning_content{
           .planning_btm{
             .planning_header_text{
@@ -31,6 +31,8 @@
                 .planning_paginate{
                   gap: 10px;
                   display: flex;
+                  justify-content: center;
+                  align-items: center;
                   .planning_pl-label{
                     display: inline-block;
                   }
@@ -96,12 +98,12 @@
               .table_content_planning{
                 .table-planning-container{
                   width: 100% !important;
-                  height: 80vh;
+                  // height: 100%;
                   @media only screen and (min-width: 1920px){
-                    height: 122vh;
+                    // height: 122vh;
                   }
                   table{
-                    width: 100%;
+                    // width: 100%;
                   }
                 }
               }
@@ -109,12 +111,12 @@
                 display: none;
               }
               .table_content_props{
-                height: 118vh;
+                // height: 118vh;
                 @media only screen and (min-width: 1920px){
-                  height: 120vh;
+                  // height: 120vh;
                 }
                 .planning_scrollable{
-                  max-height: 115vh;
+                  // max-height: 115vh;
                 }
               }
               .div_submit {
