Added thousand yen conversion to table

--- a/client/src/assets/scss/Components/TablePlanning.scss
+++ b/client/src/assets/scss/Components/TablePlanning.scss
@@ -76,7 +76,7 @@
         }
   
         .sky-txt {
-          background-color: #00ffff;
+          background-color: #e0ffff
         }
   
         .total-txt {
