changed font size in english

--- a/client/src/assets/scss/Planning/TablePlanningB.scss
+++ b/client/src/assets/scss/Planning/TablePlanningB.scss
@@ -114,6 +114,9 @@ table, th, td {
 .grey{
 background-color: #e0e0e0;
 }
+.smaller-font{
+  font-size: small;
+}
 
 .table-b-scrollable_container {
     height: 80vh;
