--- a/client/src/assets/scss/Planning/TablePlanningB.scss
+++ b/client/src/assets/scss/Planning/TablePlanningB.scss
@@ -79,6 +79,7 @@ table, th, td {
   width: 6% !important;
   text-align: center !important;
   border-top: solid 1px #ddd;
+  border-right: solid 1px #ddd;
 
 }
 .table-b-total-data{
