--- a/client/src/assets/scss/Components/Sidebar.scss
+++ b/client/src/assets/scss/Components/Sidebar.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     padding: 5px;
     background-color: #1c302c;
+        @media only screen and (max-width: 1980px){
+            flex-direction: column;
+            // background-color: #4caf50;
+        }
     .sidebar-nav {
       margin-top: 50px;
       flex-grow: 1;
