Updated switch lang. button on planning to slide. ii) added 日本語 to header switch

--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -32,6 +32,9 @@
                   gap: 10px;
                   display: flex;
                   justify-content: center;
+                  background-color: #EFEDEA;
+                  padding: 3px 10px;
+                  border-radius: 5px;
                   align-items: center;
                   .planning_pl-label{
                     display: inline-block;
