--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -23,20 +23,23 @@
                     background-color: #fff;
                     height: 0rem;
                 }
-                button.projectsList_mode_switch {
-                    position: absolute;
-                    right: 40px;
-                    top: 45px;
-                    border: 1px solid;
-                    padding: 3px 21px;
-                    border-radius: 5px;
-                    font-weight: 500;
-                    background-color: #f3f3f38b;
-                    @media only screen and (min-width: 1024px) and (max-width: 1280px) {
-                        /* For small laptops */
-                        top: 30px;
-                    }
-                }
+                // .projectsList_mode_switch {
+                //     position: absolute;
+                //     display: flex;
+                //     gap: 20px;
+                //     right: 40px;
+                //     top: 45px;
+                //     border: 1px solid #EFEDEA;
+                //     padding: 3px 21px;
+                //     border-radius: 5px;
+                //     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.153);
+                //     font-weight: 500;
+                //     background-color: #f3f3f38b;
+                //     @media only screen and (min-width: 1024px) and (max-width: 1280px) {
+                //         /* For small laptops */
+                //         top: 30px;
+                //     }
+                // }
                 .projectsList_mode_switch_datalist{
                     padding: 1rem;
                 }
