fixed titles on list screen

--- a/client/src/assets/scss/Components/ListButtons.scss
+++ b/client/src/assets/scss/Components/ListButtons.scss
@@ -37,8 +37,9 @@
           width: 180px;
           font-weight: bold;
           color: #000;
+          //  margin-left: 10px;
           @media only screen and (min-width: 1920px){
-            // margin-left: 10px;
+            margin-left: 10px;
         }
         }
       }
