--- a/client/src/assets/scss/Components/RegistrationButtons.scss
+++ b/client/src/assets/scss/Components/RegistrationButtons.scss
@@ -34,6 +34,7 @@
         width: 180px;
         font-weight: bold;
         color: #000;
+         margin-left: 10px;
         @media only screen and (min-width: 1920px) {
           margin-left: 10px; /* Optionally adjust for larger screens */
         }
