--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -139,6 +139,16 @@
                                             cursor: pointer;
                                         }
                                     }
+                                    .projectsList_table_body_project_name{
+                                        overflow-x: scroll;
+                                        max-width: 10vw;
+                                        text-align: center;
+                                        box-sizing: border-box;
+                                        @media only screen and (min-width: 1080px) and (max-width: 1800px) {
+                                        // background-color: #66d1ff;
+                                        // width: 10vw;
+                                        }
+                                    }
                                 }
                             }
                         }
