--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -150,9 +150,9 @@
                             
                                     .EmployeesListAndEdit_table_body_content_vertical{
                                         border: 1px solid  #d0cdcd;
-                                        width: 100%;
+                                        // width: 100%;
                                         text-align: center;
-                                        width: 140px;
+                                        // width: 140px;
                                         .edit_input{
                                             width: 100px;
                                         }
