--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -39,6 +39,9 @@
                   .planning_pl-label{
                     display: inline-block;
                   }
+                  p.planning_pl-label_disabled {
+                      color: #c6c6c6;
+                  }
                   button.planning_mode_switch {
                     border: 1px solid;
                     padding: 3px 21px;
@@ -46,8 +49,10 @@
                     font-weight: 500;
                     background-color: #f3f3f3;
                   }
+                  p.planning_mode_switch_disabled {
+                      color: #c6c6c6;
+                  }
                   .planning_switch{
-                    margin-top: 2px;
                     position: relative;
                     display: inline-block;
                     width: 40px;
@@ -133,7 +138,7 @@
                 gap: 1%;
                 padding: 5px 20px 5px 20px;
                 border-radius: 7px;
-                margin-top: 6px;
+                margin: 20px 6px;
                 background: #66d1ff;
               }
             }
