updated css and classnames

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -23,6 +23,8 @@
 @import './Projects/ProjectsListAndEdit.scss';
 @import './EmployeeExpenses/EmployeeExpensesRegistration.scss';
 @import './EmployeeExpenses/EmployeeExpensesList.scss';
+@import './ExpensesResults/ExpensesResultsListandEdit.scss';
+@import './ExpensesResults/ExpensesResultsRegistration.scss';
 @import './Expenses/ExpensesRegistration.scss';
 @import './Expenses/ExpensesListAndEdit.scss';
 @import './CostOfSales/CostOfSalesRegistration.scss';
