--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -21,6 +21,8 @@
 @import './Planning/TablePlanningB.scss';
 @import './Projects/ProjectsRegistration.scss';
 @import './Projects/ProjectsListAndEdit.scss';
+@import './ProjectSalesResults/ProjectSalesResultsListAndEdit.scss';
+@import './ProjectSalesResults/ProjectSalesResultsRegistration.scss';
 @import './EmployeeExpenses/EmployeeExpensesRegistration.scss';
 @import './EmployeeExpenses/EmployeeExpensesList.scss';
 @import './ExpensesResults/ExpensesResultsListandEdit.scss';
