--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsRegistration.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsRegistration.scss
@@ -134,6 +134,13 @@
                         height: 40px;
                         font-size: 25px;
                         border-radius: 5px;
+                    }   
+                    .BusinessDivisionsRegistration_dec_empty{
+                        color: whitesmoke;
+                        width: 30px;
+                        height: 40px;
+                        font-size: 25px;
+                        border-radius: 5px;
                     }
                 }
                 .BusinessDivisionsRegistration_options-btn{
