--- a/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
@@ -270,6 +270,13 @@
                             font-size: 25px;
                             border-radius: 5px;
                         }
+                        .costOfSalesRegistration_dec_empty{
+                            color: whitesmoke;
+                            width: 30px;
+                            height: 40px;
+                            font-size: 25px;
+                            border-radius: 5px;
+                        }
                     }
                     .costOfSalesRegistration_options-btn{
                         display: flex;
