--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -294,6 +294,13 @@
                                 font-size: 25px;
                                 border-radius: 5px;
                             }
+                            .EmployeesRegistration_dec_empty{
+                                color: whitesmoke;
+                                width: 30px;
+                                height: 40px;
+                                font-size: 25px;
+                                border-radius: 5px;
+                            }
                         }
                         .EmployeesRegistration_options-btn{
                             display: flex;
