--- a/client/src/assets/scss/ProjectSalesResults/ProjectSalesResultsRegistration.scss
+++ b/client/src/assets/scss/ProjectSalesResults/ProjectSalesResultsRegistration.scss
@@ -485,6 +485,13 @@
                             font-size: 25px;
                             border-radius: 5px;
                         }
+                        .projectSalesResultsRegistration_dec_empty{
+                            color: whitesmoke;
+                            width: 30px;
+                            height: 40px;
+                            font-size: 25px;
+                            border-radius: 5px;
+                        }
                     }
                     .projectSalesResultsRegistration_options-btn{
                         display: flex;
