--- a/client/src/assets/scss/Projects/ProjectsRegistration.scss
+++ b/client/src/assets/scss/Projects/ProjectsRegistration.scss
@@ -450,6 +450,13 @@
                             font-size: 25px;
                             border-radius: 5px;
                         }
+                        .projectsRegistration_dec_empty{
+                            color: whitesmoke;
+                            width: 30px;
+                            height: 40px;
+                            font-size: 25px;
+                            border-radius: 5px;
+                        }
                     }
                     .projectsRegistration_options-btn{
                         display: flex;
