--- a/client/src/assets/scss/Clients/ClientsRegistration.scss
+++ b/client/src/assets/scss/Clients/ClientsRegistration.scss
@@ -105,6 +105,13 @@
                                 font-size: 25px;
                                 border-radius: 5px;
                             }
+                            .ClientsRegistration_dec_empty{
+                                color: whitesmoke;
+                                width: 30px;
+                                height: 40px;
+                                font-size: 25px;
+                                border-radius: 5px;
+                            }
                         }
                         .ClientsRegistration_options-btn{
                             display: flex;
