--- a/client/src/assets/scss/Expenses/ExpensesRegistration.scss
+++ b/client/src/assets/scss/Expenses/ExpensesRegistration.scss
@@ -349,6 +349,13 @@
                                 font-size: 25px;
                                 border-radius: 5px;
                             }
+                            .expensesRegistration_dec_empty{
+                            color: whitesmoke;
+                            width: 30px;
+                            height: 40px;
+                            font-size: 25px;
+                            border-radius: 5px;
+                              }
                         }
                         .expensesRegistration_options-btn{
                             display: flex;
