--- a/client/src/assets/scss/ExpensesResults/ExpensesResultsRegistration.scss
+++ b/client/src/assets/scss/ExpensesResults/ExpensesResultsRegistration.scss
@@ -349,6 +349,13 @@
                                 font-size: 25px;
                                 border-radius: 5px;
                             }
+                            .expensesResultsRegistration_dec_empty{
+                                color: whitesmoke;
+                                width: 30px;
+                                height: 40px;
+                                font-size: 25px;
+                                border-radius: 5px;   
+                            }
                         }
                         .expensesResultsRegistration_options-btn{
                             display: flex;
