--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import './Components/Button.scss';
 @import './Components/Card.scss';
 @import './Components/CrudModal.scss';
+@import './Components/DisabledElement.scss';
 @import './Components/DropDown.scss';
 @import './Components/Footer.scss';
 @import './Components/GraphDashboard.scss';
