fixed projects registration order and hyphens in css

--- a/client/src/assets/scss/Components/SliderToggle.scss
+++ b/client/src/assets/scss/Components/SliderToggle.scss
@@ -1,5 +1,5 @@
 
-                .mode_switch_container {
+                .mode-switch-container {
                     position: absolute;
                     display: flex;
                     gap: 20px;
@@ -20,7 +20,7 @@
                   .slider-label{
                     display: inline-block;
                   }
-                 .slider_mode_switch {
+                 .slider-mode-switch {
                     // border: 1px solid;
                     // padding: 3px 21px;
                     border-radius: 5px;
@@ -30,7 +30,7 @@
                     display: flex;
                     flex-direction: row;
                   }
-                  .slider_switch{
+                  .slider-switch{
                     margin-top: 2px;
                     position: relative;
                     display: inline-block;
