--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -1,16 +1,16 @@
-.projectsList_wrapper{
+.projectsList-wrapper{
     width: 100%;
     max-width: 2560px;
-    .projectsList_cont_wrapper{
+    .projectsList-cont-wrapper{
         display: flex;
         background-color: #EFEDEA;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .projectsList_wrapper{
+        .projectsList-wrapper{
             width: 84%; // i do not know wjy but it breaks if i set to 100%
             padding: 10px 30px 10px 30px;
-            .projectsList_top_content{
+            .projectsList-top-content{
                 position: relative;
                 display: flex;
                 background-color: #fff;
@@ -19,11 +19,11 @@
                 height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
-                .projectsList_top_body_cont{
+                .projectsList-top-body-cont{
                     background-color: #fff;
                     height: 0rem;
                 }
-                // .projectsList_mode_switch {
+                // .projectsList-mode-switch {
                 //     position: absolute;
                 //     display: flex;
                 //     gap: 20px;
@@ -40,15 +40,15 @@
                 //         top: 30px;
                 //     }
                 // }
-                .projectsList_mode_switch_datalist{
+                .projectsList-mode-switch-datalist{
                     padding: 1rem;
                 }
-                .projectsList_mid_body_cont{
+                .projectsList-mid-body-cont{
                     height: 100%;
                     background-color: #fff;
-                    .ListButtons_btn{
+                    .ListButtons-btn{
                     }
-                    .projectsList_table_wrapper{
+                    .projectsList-table-wrapper{
                         width: 100%;
                         height: 60vh;
                         overflow-y: auto; 
@@ -78,12 +78,12 @@
                             }
                             scrollbar-width: none; 
                         }                         
-                        .projectsList_table_cont.editScrollable {
+                        .projectsList-table-cont.editScrollable {
                             overflow-x: auto;
                             padding: 0px 0px 0px 0px;
                             
                         }
-                        .projectsList_table_cont{  
+                        .projectsList-table-cont{  
                             overflow-x: auto;
                             &::-webkit-scrollbar {
                                 width: 8px;
@@ -106,22 +106,22 @@
                             }                         
                             .table{
                                 width: 130%;
-                                .projectsList_table_title{
+                                .projectsList-table-title{
                                     position: sticky;
                                     top: 0;
                                     z-index: 1;
                                     text-align: center;
                                     background-color: #808080;
                                     border: 1px solid #808080;
-                                    .projectsList_table_title_content_vertical{
+                                    .projectsList-table-title-content-vertical{
                                         color: #fff;
                                         border: none;
                                         font-size: 14px;
                                     }
                                 }
-                                .projectsList_table_body{
+                                .projectsList-table-body{
                                     
-                                    .projectsList_table_body_content_horizontal{
+                                    .projectsList-table-body-content-horizontal{
                                         
                                         border: none;
                                         &:nth-child(odd){
@@ -130,7 +130,7 @@
                                         &:nth-child(even){
                                             background-color: #e0e0e0;
                                         }
-                                        .projectsList_table_body_content_vertical{
+                                        .projectsList-table-body-content-vertical{
                                             border: 1px solid  #d0cdcd;
                                             text-align: center;
                                         }
@@ -139,7 +139,7 @@
                                             cursor: pointer;
                                         }
                                     }
-                                    .projectsList_table_body_project_name{
+                                    .projectsList-table-body-project-name{
                                         overflow-x: scroll;
                                         max-width: 10vw;
                                         text-align: center;
@@ -153,16 +153,16 @@
                             }
                         }
                     }
-                    .projectsList_table_wrapper.editMode {
+                    .projectsList-table-wrapper.editMode {
                         height: 55vh;
                     }
-                    .projectsList_edit_submit_btn_cont{
+                    .projectsList-edit-submit-btn-cont{
                         display: flex;
                         justify-content: center;
                         position: absolute;
                         bottom: 2%;
                         right:  2.5%;
-                        .projectsList_edit_submit_btn{
+                        .projectsList-edit-submit-btn{
                             display: flex;
                             justify-content: center;
                             align-items: center;
@@ -173,15 +173,15 @@
                             background: #66d1ff;
                         }
                     }
-                    .projectsList_is_editing_wrapper{
-                        .projectsList_is_editing_cont{         
+                    .projectsList-is-editing-wrapper{
+                        .projectsList-is-editing-cont{         
                         }
                     }
                     
                 }
             }
         }
-        .projectsList_wrapper.editMode{
+        .projectsList-wrapper.editMode{
             overflow-x: hidden;
         }
     }
