updates on classnames , changes on scss

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -34,6 +34,8 @@
 @import './Expenses/ExpensesListAndEdit.scss';
 @import './CostOfSales/CostOfSalesRegistration.scss';
 @import './CostOfSales/CostOfSalesListAndEdit.scss';
+@import './CostOfSalesResults/CostOfSalesResultsListAndEdit.scss';
+@import './CostOfSalesResults/CostOfSalesResultsRegistration.scss';
 @import './Clients/ClientsRegistration.scss';
 @import './Clients/ClientsListAndEdit.scss';
 @import './Employees/EmployeesRegistration.scss';
