results summary page

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -44,3 +44,6 @@
 @import './BusinessDivisions/BusinessDivisionsListAndEdit.scss';
 @import './Users/UsersRegistration.scss';
 @import './Users/UsersListAndEdit.scss';
+@import './Results/ResultsListAndEdit.scss';
+@import './Results/TableResultsA.scss';
+@import './Results/TableResultsB.scss';
