--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -8,7 +8,7 @@
             flex-direction: column;
         }
         .projectsList-wrapper{
-            width: 84%; // i do not know wjy but it breaks if i set to 100%
+            // width: 84%; // i do not know wjy but it breaks if i set to 100%
             padding: 10px 30px 10px 30px;
             .projectsList-top-content{
                 position: relative;
